--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
+    "morgan": "^1.10.0",
     "node-mailjet": "^3.3.1",
     "nodemon": "^2.0.4",
     "socket.io": "^2.3.0"
