--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "firebase": "^7.19.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "mdbreact": "^4.27.0",
     "moment": "^2.27.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
